tests/NormalTests/paczka1/small_fuzzy/86027765.err
Error in line 1: 0dRr A237 77,2
Error in line 7: rxxBRC9Lj S13 32,3
